Bug 404156 - Can't select many columns as memo
Summary: Can't select many columns as memo
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.0.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: usability
: 392217 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-09 21:22 UTC by k.buzko
Modified: 2019-09-21 12:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description k.buzko 2019-02-09 21:22:32 UTC
SUMMARY
In version 4 when importing csv it was possible to select more than one column from file to be imported into Memo. In version 5 i can select only one column.

STEPS TO REPRODUCE
1. File -> import -> CSV
2. Add new profile 
3. Select csv file with more than one column
4. when selecting columns for import select column numbers for each property

OBSERVED RESULT
It is impossible to select more than one column for memo

EXPECTED RESULT
Option to select more than one like before (* sign on selected columns in dropdown)
Or other field type that would allow selecting many columns 

SOFTWARE/OS VERSIONS
Windows: 10 

ADDITIONAL INFORMATION
Tested on Version 5.03 downloaded from here:
https://binary-factory.kde.org/job/KMyMoney_Release_win64/
Comment 1 Thomas Baumgart 2019-02-10 11:39:49 UTC
Git commit cc119c58deaf77ead758e3b3ae729663f9362a78 by Thomas Baumgart.
Committed on 10/02/2019 at 11:19.
Pushed by tbaumgart into branch '5.0'.

Improve memo column selection in CSV import wizard

The CSV import wizard did allow to select multiple columns for memo
fields but it was not visible to the user which ones were selected.
Also, there is no way to clear the memo selection only but only all
column assignments.

This change adds a display item that shows the selected columns and also
adds a clear button to clear the memo field selection only.

GUI:
FIXED-IN: 5.0.4

M  +53   -19   kmymoney/plugins/csv/import/bankingwizardpage.cpp
M  +3    -1    kmymoney/plugins/csv/import/bankingwizardpage.h
M  +73   -51   kmymoney/plugins/csv/import/bankingwizardpage.ui

https://commits.kde.org/kmymoney/cc119c58deaf77ead758e3b3ae729663f9362a78
Comment 2 Thomas Baumgart 2019-09-21 12:07:20 UTC
*** Bug 392217 has been marked as a duplicate of this bug. ***